--- a/src/places/components/PlaceItem.css
+++ b/src/places/components/PlaceItem.css
@@ -14,7 +14,7 @@
 .place-item__image {
   width: 100%;
   height: 12.5rem;
-  margin-right: 1.5rem;
+  overflow: hidden;
 }
 
 .place-item__image img {
@@ -51,5 +51,5 @@
 @media (min-width: 768px) {
   .place-item__image {
     height: 20rem;
-  } 
+  }
 }
