--- a/src/places/components/PlaceList.css
+++ b/src/places/components/PlaceList.css
@@ -5,3 +5,7 @@
   width: 90%;
   max-width: 40rem;
 }
+
+.places-list li::marker {
+  content: none;
+}
